feat: Internationalization (i18n) of UI text elements across templates and JS

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -216,9 +216,9 @@
     "common.custom_tags": "Custom Tags",
     "common.wishlist": "Wishlist",
     "common.files": "Files",
-    "common.updated_plural": "Updated",
+    "common.updated_plural": "updated",
     "stats.games_by_genre": "Games by Genre",
-    "stats.no_games_found": "No games found.",
+    "stats.no_games_found": "No recent games found",
     "settings.api_saved": "API Settings saved",
     "settings.api_save_error": "Error saving settings",
     "settings.connection_ok": "Connection OK! Found: ",
@@ -406,5 +406,104 @@
     "settings.faq_a4": "MyFoil supports multiple sources with automatic fallback. Higher priority sources are tried first. We recommend keeping at least 2 sources active.",
     "settings.help_links_title": "Useful Links",
     "settings.link_report_bug": "Report Bug",
-    "settings.link_wiki": "Full Wiki"
+    "settings.link_wiki": "Full Wiki",
+    "footer.identification": "Identification",
+    "footer.build": "Build",
+    "common.unknown": "Unknown",
+    "common.config_required": "Configuration Required",
+    "common.configure_now": "Configure Now",
+    "common.details": "Details",
+    "dashboard.filters": "Filters",
+    "dashboard.filter_gender": "Genre",
+    "dashboard.all_genres": "All Genres",
+    "dashboard.filter_tag": "Tag",
+    "dashboard.all_tags": "All Tags",
+    "dashboard.sort": "Sort",
+    "dashboard.sort_az": "A-Z (Name)",
+    "dashboard.sort_za": "Z-A (Name)",
+    "dashboard.sort_release_new": "Release (New)",
+    "dashboard.sort_release_old": "Release (Old)",
+    "dashboard.sort_added_new": "Recently Added",
+    "dashboard.sort_added_old": "Oldest Added",
+    "dashboard.sort_tid_asc": "Title ID (Asc)",
+    "dashboard.sort_update_status": "Update Status",
+    "dashboard.sort_size_desc": "Size (Largest)",
+    "dashboard.sort_size_asc": "Size (Smallest)",
+    "dashboard.filter_missing_base": "Missing Base",
+    "dashboard.filter_pending_update": "Pending Update",
+    "dashboard.filter_pending_dlc": "Pending DLC",
+    "dashboard.filter_redundant_title": "Redundant Files",
+    "dashboard.filter_redundant": "Redundant",
+    "dashboard.clear_filters": "Clear Filters",
+    "dashboard.view_card": "Grid View",
+    "dashboard.view_icon": "Icon View",
+    "dashboard.view_list": "List View",
+    "dashboard.items_count": "items",
+    "dashboard.games_count": "games",
+    "dashboard.no_results_title": "No games found",
+    "dashboard.no_results_text": "Try adjusting your filters or check settings.",
+    "dashboard.loading_more": "Loading more games...",
+    "dashboard.loading_library": "Loading Library...",
+    "dashboard.loading_page": "Loading page",
+    "dashboard.library_updated": "Library updated!",
+    "dashboard.switching_legacy": "Switching to legacy endpoint...",
+    "dashboard.error_refresh": "Failed to refresh library: ",
+    "dashboard.badge_redundant": "REDUNDANT",
+    "dashboard.badge_update": "UPDATE",
+    "dashboard.badge_dlc": "DLC",
+    "dashboard.table_icon": "Icon",
+    "dashboard.table_title": "Game Title",
+    "dashboard.table_tid": "Title ID",
+    "dashboard.table_version": "Version",
+    "dashboard.table_ratings": "Ratings",
+    "dashboard.table_size": "Size",
+    "dashboard.table_status": "Status",
+    "dashboard.status_missing": "Missing",
+    "dashboard.status_owned": "Owned",
+    "dashboard.status_incomplete": "Incomplete",
+    "stats.dashboard_title": "Statistics Dashboard",
+    "stats.dashboard_subtitle": "Overview of your collection and comparison with global catalog.",
+    "stats.filter_library": "Filter by Library",
+    "stats.all_libraries": "All Libraries",
+    "stats.card_total_library": "Total Library",
+    "stats.files": "Files",
+    "stats.on_disk": "on disk",
+    "stats.card_collection_status": "Collection Status",
+    "stats.up_to_date": "up to date",
+    "stats.pending": "pending",
+    "stats.card_titledb_coverage": "TitleDB Coverage",
+    "stats.global_catalog": "Global Catalog",
+    "stats.titles": "titles",
+    "stats.card_id_health": "Identification Health",
+    "stats.unidentified_files": "Unidentified files",
+    "stats.unnamed_titles": "Unnamed titles in DB",
+    "stats.base_games": "Base Games",
+    "stats.updates": "Updates",
+    "stats.dlcs": "DLCs",
+    "stats.titledb_source": "TitleDB Source",
+    "stats.genre_distribution": "Genre Distribution",
+    "upcoming.search_placeholder": "Search upcoming releases...",
+    "upcoming.loading": "Fetching releases from IGDB...",
+    "upcoming.none_found": "No upcoming releases found",
+    "upcoming.check_settings": "Check your connection or IGDB API keys.",
+    "upcoming.api_error": "Error configuring API.",
+    "upcoming.card_launch": "Launch",
+    "upcoming.card_genres": "Genres",
+    "upcoming.card_wishlist": "Wishlist",
+    "upcoming.no_description": "No description available.",
+    "upcoming.screenshots": "Screenshots",
+    "upcoming.btn_add_wishlist_tooltip": "Add to Wishlist",
+    "upcoming.error_adding": "Error adding to wishlist",
+    "upcoming.added_success": "added to wishlist!",
+    "upcoming.not_found_titledb": "Game not found in TitleDB",
+    "wishlist.add_game": "Add Game",
+    "wishlist.export": "Export",
+    "wishlist.loading": "Loading wishlist...",
+    "wishlist.empty_title": "Your wishlist is empty",
+    "wishlist.empty_text": "Add games you want to play in the future.",
+    "wishlist.start_adding": "Start Adding",
+    "wishlist.modal_title": "Search Game to Add",
+    "wishlist.search_label": "Search in TitleDB",
+    "wishlist.search_placeholder": "Type game name...",
+    "wishlist.search_help": "Type at least 3 characters to search"
 }
