--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -216,9 +216,9 @@
     "common.custom_tags": "Etiquetas Personalizadas",
     "common.wishlist": "Lista de Deseos",
     "common.files": "Archivos",
-    "common.updated_plural": "Actualizado",
+    "common.updated_plural": "actualizados",
     "stats.games_by_genre": "Juegos por Género",
-    "stats.no_games_found": "No se encontraron juegos.",
+    "stats.no_games_found": "No se encontraron juegos recientes",
     "settings.api_saved": "Ajustes API guardados",
     "settings.api_save_error": "Error guardando ajustes",
     "settings.connection_ok": "¡Conexión OK! Encontrado: ",
@@ -406,5 +406,104 @@
     "settings.faq_a4": "MyFoil soporta múltiples fuentes con fallback automático. Las fuentes con mayor prioridad se intentan primero. Recomendamos mantener al menos 2 fuentes activas.",
     "settings.help_links_title": "Enlaces Útiles",
     "settings.link_report_bug": "Reportar Bug",
-    "settings.link_wiki": "Wiki Completa"
+    "settings.link_wiki": "Wiki Completa",
+    "footer.identification": "Identificación",
+    "footer.build": "Versión",
+    "common.unknown": "Desconocido",
+    "common.config_required": "Configuración Requerida",
+    "common.configure_now": "Configurar Ahora",
+    "common.details": "Detalles",
+    "dashboard.filters": "Filtros",
+    "dashboard.filter_gender": "Género",
+    "dashboard.all_genres": "Todos los Géneros",
+    "dashboard.filter_tag": "Etiqueta",
+    "dashboard.all_tags": "Todas las Etiquetas",
+    "dashboard.sort": "Ordenar",
+    "dashboard.sort_az": "A-Z (Nombre)",
+    "dashboard.sort_za": "Z-A (Nombre)",
+    "dashboard.sort_release_new": "Lanzamiento (Nuevo)",
+    "dashboard.sort_release_old": "Lanzamiento (Antiguo)",
+    "dashboard.sort_added_new": "Añadido Recientemente",
+    "dashboard.sort_added_old": "Añadido Antiguamente",
+    "dashboard.sort_tid_asc": "Title ID (Ascendente)",
+    "dashboard.sort_update_status": "Estado de Actualización",
+    "dashboard.sort_size_desc": "Tamaño (Mayor)",
+    "dashboard.sort_size_asc": "Tamaño (Menor)",
+    "dashboard.filter_missing_base": "Falta Archivo Base",
+    "dashboard.filter_pending_update": "Pendiente Actualización",
+    "dashboard.filter_pending_dlc": "Pendiente DLC",
+    "dashboard.filter_redundant_title": "Archivos Redundantes",
+    "dashboard.filter_redundant": "Redundante",
+    "dashboard.clear_filters": "Limpiar Filtros",
+    "dashboard.view_card": "Cuadrícula",
+    "dashboard.view_icon": "Iconos",
+    "dashboard.view_list": "Lista",
+    "dashboard.items_count": "elementos",
+    "dashboard.games_count": "juegos",
+    "dashboard.no_results_title": "No se encontraron juegos",
+    "dashboard.no_results_text": "Intenta ajustar tus filtros o verifica la configuración.",
+    "dashboard.loading_more": "Cargando más juegos...",
+    "dashboard.loading_library": "Cargando Biblioteca...",
+    "dashboard.loading_page": "Cargando página",
+    "dashboard.library_updated": "¡Biblioteca actualizada!",
+    "dashboard.switching_legacy": "Cambiando a endpoint legado...",
+    "dashboard.error_refresh": "Fallo al actualizar biblioteca: ",
+    "dashboard.badge_redundant": "REDUNDANTE",
+    "dashboard.badge_update": "ACTUALIZACIÓN",
+    "dashboard.badge_dlc": "DLC",
+    "dashboard.table_icon": "Icono",
+    "dashboard.table_title": "Título del Juego",
+    "dashboard.table_tid": "Title ID",
+    "dashboard.table_version": "Versión",
+    "dashboard.table_ratings": "Valoraciones",
+    "dashboard.table_size": "Tamaño",
+    "dashboard.table_status": "Estado",
+    "dashboard.status_missing": "Faltante",
+    "dashboard.status_owned": "Propio",
+    "dashboard.status_incomplete": "Incompleto",
+    "stats.dashboard_title": "Panel de Estadísticas",
+    "stats.dashboard_subtitle": "Resumen de tu colección y comparación con el catálogo global.",
+    "stats.filter_library": "Filtrar por Biblioteca",
+    "stats.all_libraries": "Todas las Bibliotecas",
+    "stats.card_total_library": "Total de la Biblioteca",
+    "stats.files": "Archivos",
+    "stats.on_disk": "en disco",
+    "stats.card_collection_status": "Estado de la Colección",
+    "stats.up_to_date": "actualizados",
+    "stats.pending": "pendientes",
+    "stats.card_titledb_coverage": "Cobertura TitleDB",
+    "stats.global_catalog": "Catálogo Global",
+    "stats.titles": "títulos",
+    "stats.card_id_health": "Salud de Identificación",
+    "stats.unidentified_files": "Archivos no identificados",
+    "stats.unnamed_titles": "Títulos sin nombre en BD",
+    "stats.base_games": "Juegos Base",
+    "stats.updates": "Actualizaciones",
+    "stats.dlcs": "DLCs",
+    "stats.titledb_source": "Fuente TitleDB",
+    "stats.genre_distribution": "Distribución por Género",
+    "upcoming.search_placeholder": "Buscar lanzamientos...",
+    "upcoming.loading": "Obteniendo lanzamientos de IGDB...",
+    "upcoming.none_found": "No se encontraron lanzamientos",
+    "upcoming.check_settings": "Verifica tu conexión o claves API de IGDB.",
+    "upcoming.api_error": "Error configurando API.",
+    "upcoming.card_launch": "Lanzamiento",
+    "upcoming.card_genres": "Géneros",
+    "upcoming.card_wishlist": "Lista de Deseos",
+    "upcoming.no_description": "Sin descripción disponible.",
+    "upcoming.screenshots": "Capturas",
+    "upcoming.btn_add_wishlist_tooltip": "Añadir a Lista de Deseos",
+    "upcoming.error_adding": "Error añadiendo a lista de deseos",
+    "upcoming.added_success": "añadido a lista de deseos!",
+    "upcoming.not_found_titledb": "Juego no encontrado en TitleDB",
+    "wishlist.add_game": "Añadir Juego",
+    "wishlist.export": "Exportar",
+    "wishlist.loading": "Cargando lista de deseos...",
+    "wishlist.empty_title": "Tu lista de deseos está vacía",
+    "wishlist.empty_text": "Añade juegos que quieras jugar en el futuro.",
+    "wishlist.start_adding": "Comenzar a Añadir",
+    "wishlist.modal_title": "Buscar Juego para Añadir",
+    "wishlist.search_label": "Buscar en TitleDB",
+    "wishlist.search_placeholder": "Escribe nombre del juego...",
+    "wishlist.search_help": "Escribe al menos 3 caracteres para buscar"
 }
