--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -227,7 +227,7 @@
     "common.files": "Arquivos",
     "common.updated_plural": "atualizados",
     "stats.games_by_genre": "Jogos por Gênero",
-    "stats.no_games_found": "Nenhum jogo encontrado.",
+    "stats.no_games_found": "Nenhum jogo recente encontrado",
     "settings.api_saved": "Configurações de API salvas",
     "settings.api_save_error": "Erro ao salvar configurações",
     "settings.connection_ok": "Conexão OK! Encontrado: ",
@@ -415,5 +415,104 @@
     "settings.faq_a4": "MyFoil suporta múltiplas fontes com fallback automático. Fontes com maior prioridade são tentadas primeiro. Recomendamos manter ao menos 2 fontes ativas.",
     "settings.help_links_title": "Links Úteis",
     "settings.link_report_bug": "Reportar Bug",
-    "settings.link_wiki": "Wiki Completa"
+    "settings.link_wiki": "Wiki Completa",
+    "footer.identification": "Identificação",
+    "footer.build": "Versão",
+    "common.unknown": "Desconhecido",
+    "common.config_required": "Configuração Necessária",
+    "common.configure_now": "Configurar Agora",
+    "common.details": "Detalhes",
+    "dashboard.filters": "Filtros",
+    "dashboard.filter_gender": "Gênero",
+    "dashboard.all_genres": "Todos os Gêneros",
+    "dashboard.filter_tag": "Tag",
+    "dashboard.all_tags": "Todas as Tags",
+    "dashboard.sort": "Ordenar",
+    "dashboard.sort_az": "A-Z (Nome)",
+    "dashboard.sort_za": "Z-A (Nome)",
+    "dashboard.sort_release_new": "Lançamento (Novo)",
+    "dashboard.sort_release_old": "Lançamento (Antigo)",
+    "dashboard.sort_added_new": "Adicionado Recentemente",
+    "dashboard.sort_added_old": "Adicionado Antigamente",
+    "dashboard.sort_tid_asc": "Title ID (Crescente)",
+    "dashboard.sort_update_status": "Status de Atualização",
+    "dashboard.sort_size_desc": "Tamanho (Maior)",
+    "dashboard.sort_size_asc": "Tamanho (Menor)",
+    "dashboard.filter_missing_base": "Falta Arquivo Base",
+    "dashboard.filter_pending_update": "Pendente Atualização",
+    "dashboard.filter_pending_dlc": "Pendente DLC",
+    "dashboard.filter_redundant_title": "Arquivos Redundantes",
+    "dashboard.filter_redundant": "Redundante",
+    "dashboard.clear_filters": "Limpar Filtros",
+    "dashboard.view_card": "Grade",
+    "dashboard.view_icon": "Ícones",
+    "dashboard.view_list": "Lista",
+    "dashboard.items_count": "itens",
+    "dashboard.games_count": "jogos",
+    "dashboard.no_results_title": "Nenhum jogo encontrado",
+    "dashboard.no_results_text": "Tente ajustar seus filtros ou verifique as configurações.",
+    "dashboard.loading_more": "Carregando mais jogos...",
+    "dashboard.loading_library": "Carregando Biblioteca...",
+    "dashboard.loading_page": "Carregando página",
+    "dashboard.library_updated": "Biblioteca atualizada!",
+    "dashboard.switching_legacy": "Mudando para endpoint legado...",
+    "dashboard.error_refresh": "Falha ao atualizar biblioteca: ",
+    "dashboard.badge_redundant": "REDUNDANTE",
+    "dashboard.badge_update": "ATUALIZAÇÃO",
+    "dashboard.badge_dlc": "DLC",
+    "dashboard.table_icon": "Ícone",
+    "dashboard.table_title": "Título do Jogo",
+    "dashboard.table_tid": "Title ID",
+    "dashboard.table_version": "Versão",
+    "dashboard.table_ratings": "Avaliações",
+    "dashboard.table_size": "Tamanho",
+    "dashboard.table_status": "Status",
+    "dashboard.status_missing": "Faltando",
+    "dashboard.status_owned": "Possuído",
+    "dashboard.status_incomplete": "Incompleto",
+    "stats.dashboard_title": "Dashboard de Estatísticas",
+    "stats.dashboard_subtitle": "Visão geral da sua coleção e comparação com o catálogo global.",
+    "stats.filter_library": "Filtrar por Biblioteca",
+    "stats.all_libraries": "Todas as Bibliotecas",
+    "stats.card_total_library": "Total da Biblioteca",
+    "stats.files": "Arquivos",
+    "stats.on_disk": "em disco",
+    "stats.card_collection_status": "Status da Coleção",
+    "stats.up_to_date": "atualizados",
+    "stats.pending": "pendentes",
+    "stats.card_titledb_coverage": "Cobertura TitleDB",
+    "stats.global_catalog": "Catálogo Global",
+    "stats.titles": "títulos",
+    "stats.card_id_health": "Saúde da Identificação",
+    "stats.unidentified_files": "Arquivos não identificados",
+    "stats.unnamed_titles": "Títulos sem nome no Banco de Dados",
+    "stats.base_games": "Jogos Base",
+    "stats.updates": "Updates",
+    "stats.dlcs": "DLCs",
+    "stats.titledb_source": "Fonte TitleDB",
+    "stats.genre_distribution": "Distribuição por Gênero",
+    "upcoming.search_placeholder": "Buscar lançamentos...",
+    "upcoming.loading": "Buscando lançamentos no IGDB...",
+    "upcoming.none_found": "Nenhum lançamento encontrado",
+    "upcoming.check_settings": "Verifique sua conexão ou as chaves de API do IGDB.",
+    "upcoming.api_error": "Erro ao configurar API.",
+    "upcoming.card_launch": "Lançamento",
+    "upcoming.card_genres": "Gêneros",
+    "upcoming.card_wishlist": "Wishlist",
+    "upcoming.no_description": "Sem descrição disponível.",
+    "upcoming.screenshots": "Screenshots",
+    "upcoming.btn_add_wishlist_tooltip": "Adicionar à Wishlist",
+    "upcoming.error_adding": "Erro ao adicionar à wishlist",
+    "upcoming.added_success": "adicionado à wishlist!",
+    "upcoming.not_found_titledb": "Jogo não encontrado no TitleDB",
+    "wishlist.add_game": "Adicionar Jogo",
+    "wishlist.export": "Exportar",
+    "wishlist.loading": "Carregando wishlist...",
+    "wishlist.empty_title": "Sua wishlist está vazia",
+    "wishlist.empty_text": "Adicione jogos que pretende jogar no futuro.",
+    "wishlist.start_adding": "Começar a Adicionar",
+    "wishlist.modal_title": "Buscar Jogo para Adicionar",
+    "wishlist.search_label": "Buscar no TitleDB",
+    "wishlist.search_placeholder": "Digite o nome do jogo...",
+    "wishlist.search_help": "Digite ao menos 3 caracteres para buscar"
 }
