fix(i18n): translation strings for Watchdog added to settings page, fixed layout 500 error in wishlist/upcoming

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -439,6 +439,18 @@
     "dashboard.view_icon": "Icon View",
     "dashboard.view_list": "List View",
     "dashboard.items_count": "items",
+    "settings.restart_watchdog_confirm": "Restart the watchdog? It will be stopped and started again.",
+    "settings.running": "Running",
+    "settings.stopped_error": "Stopped/Error",
+    "settings.monitored_directories": "Monitored Directories:",
+    "settings.last_event": "Last Event:",
+    "settings.errors": "Errors:",
+    "settings.last_error": "Last Error:",
+    "settings.auto_restarts": "Auto-Restarts:",
+    "settings.watchdog_not_initialized": "Watchdog not initialized or stopped",
+    "settings.watchdog_fetch_error": "Error fetching status:",
+    "settings.watchdog_status": "Watchdog Status",
+    "settings.watchdog_restart_button": "Restart Watchdog",
     "dashboard.games_count": "games",
     "dashboard.no_results_title": "No games found",
     "dashboard.no_results_text": "Try adjusting your filters or check settings.",
