--- a/app/translations/es.json
+++ b/app/translations/es.json
@@ -439,6 +439,18 @@
     "dashboard.view_icon": "Iconos",
     "dashboard.view_list": "Lista",
     "dashboard.items_count": "elementos",
+    "settings.restart_watchdog_confirm": "¿Reiniciar el watchdog? Se detendrá y se iniciará de nuevo.",
+    "settings.running": "Ejecutando",
+    "settings.stopped_error": "Detenido/Error",
+    "settings.monitored_directories": "Directorios Monitoreados:",
+    "settings.last_event": "Último Evento:",
+    "settings.errors": "Errores:",
+    "settings.last_error": "Último error:",
+    "settings.auto_restarts": "Auto-Reinicios:",
+    "settings.watchdog_not_initialized": "Watchdog no inicializado o detenido",
+    "settings.watchdog_fetch_error": "Error al obtener estado:",
+    "settings.watchdog_status": "Estado del Watchdog",
+    "settings.watchdog_restart_button": "Reiniciar Watchdog",
     "dashboard.games_count": "juegos",
     "dashboard.no_results_title": "No se encontraron juegos",
     "dashboard.no_results_text": "Intenta ajustar tus filtros o verifica la configuración.",
