--- a/app/translations/pt_BR.json
+++ b/app/translations/pt_BR.json
@@ -448,6 +448,18 @@
     "dashboard.view_icon": "Ícones",
     "dashboard.view_list": "Lista",
     "dashboard.items_count": "itens",
+    "settings.restart_watchdog_confirm": "Reiniciar o watchdog? Ele será parado e iniciado novamente.",
+    "settings.running": "Rodando",
+    "settings.stopped_error": "Parado/Erro",
+    "settings.monitored_directories": "Diretórios Monitorados:",
+    "settings.last_event": "Último Evento:",
+    "settings.errors": "Erros:",
+    "settings.last_error": "Último erro:",
+    "settings.auto_restarts": "Auto-Reinicializações:",
+    "settings.watchdog_not_initialized": "Watchdog não inicializado ou parado",
+    "settings.watchdog_fetch_error": "Erro ao buscar status:",
+    "settings.watchdog_status": "Status do Watchdog",
+    "settings.watchdog_restart_button": "Reiniciar Watchdog",
     "dashboard.games_count": "jogos",
     "dashboard.no_results_title": "Nenhum jogo encontrado",
     "dashboard.no_results_text": "Tente ajustar seus filtros ou verifique as configurações.",
